# DepManager

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  connexion_test.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: branch-naming.yml
docs/: README.md  architecture.md  contributing.md  extending-remotes.md  recipe-authoring.md
src/depmanager/: __init__.py  manager.py
src/depmanager/api/: builder.py  database.py  dependency.py  load.py  local.py  package.py  recipe.py  remotes.py  toolsets.py
src/depmanager/api/internal/: common.py  config_file.py  crypto.py  data_locking.py  database_common.py  database_local.py  database_remote_folder.py  database_remote_ftp.py  database_remote_server.py  dependency.py  machine.py  messaging.py  recipe_builder.py  system.py  toolset.py
src/depmanager/cmake/: DepManager.cmake  ExternalDependencyManager.cmake
src/depmanager/command/: build.py  get.py  info.py  load.py  pack.py  remote.py  server.py  toolset.py
src/depmanager/internal/: add.py  client.py  common.py  database.py  dependency.py  info.py  recipe.py  remote.py  search.py
src/depmanager/server/: process.py  server.py  server_cmd.py
test/: conftest.py  test_config_file.py  test_dependency.py  test_local_database.py  test_machine.py  test_package_add_from_remote.py
