[tool.poetry]
name = "depmanager"
version = "0.5.5"
description = "Simple Dependency manager"
authors = ["Silmaen <genteur.slayer@laposte.net>"]
readme = "README.md"
license = "MIT"
keywords = ["dependency", "development", "cmake", "C++"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "depmanager", from = "src" }]
include = ["src/depmanager/cmake/*.cmake"]
exclude = ["LICENSE"]

[tool.poetry.urls]
"Homepage" = "https://github.com/Silmaen/DepManager"

[tool.poetry.dependencies]
python = ">=3.9"
requests = "*"
requests-toolbelt = ">=1.0.0"
PyYAML = "*"
rich = "*"
cryptography = "46.0.5"

[tool.poetry.group.dev.dependencies]
twine = ">=6.2.0"
pytest = ">=8.0.0"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-ra", "--strict-markers"]

[tool.poetry.scripts]
depmanager = "depmanager:main"
dmgr = "depmanager:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
